<resources>
    <string name="app_name" translatable="false">Astronomer</string>
    <string name="nav_header_title" translatable="false">Astronomer</string>
    <string name="nav_header_subtitle">My weight in other planets!</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="menu_weight">My Weight</string>
    <string name="menu_eclipses">Next Eclipses</string>
    <string name="menu_config">About</string>

    <string name="home_second" translatable="false">Home Second</string>

    <string name="weight1">Enter your weight in kg:</string>
    <string name="weight2">Your weight is:</string>
    <string name="weight3">Mercury</string>
    <string name="weight4">Venus</string>
    <string name="earth">Earth</string>
    <string name="weight5">Mars</string>
    <string name="weight6">Jupiter</string>
    <string name="weight7">Saturn</string>
    <string name="weight8">Uranus</string>
    <string name="weight9">Neptune</string>
    <string name="weight10">Pluto</string>
    <string name="weight11">Moon</string>
    <string name="weight_button">Calculate!</string>

    <string name="alert">Go to Wikipedia?</string>
    <string name="alert_text">You will be redirected to Wikipedia for more information about</string>
    <string name="go">Go</string>
    <string name="cancel">Cancel</string>

    <string name="mercury_link">https://en.wikipedia.org/wiki/Mercury_(planet)</string>
    <string name="venus_link">https://en.wikipedia.org/wiki/Venus</string>
    <string name="mars_link">https://en.wikipedia.org/wiki/Mars</string>
    <string name="jupiter_link">https://en.wikipedia.org/wiki/Jupiter</string>
    <string name="saturn_link">https://en.wikipedia.org/wiki/Saturn</string>
    <string name="uranus_link">https://en.wikipedia.org/wiki/Uranus</string>
    <string name="neptune_link">https://en.wikipedia.org/wiki/Neptune</string>
    <string name="pluto_link">https://en.wikipedia.org/wiki/Pluto</string>
    <string name="moon_link">https://en.wikipedia.org/wiki/Moon</string>
    <string name="earth_link">https://en.wikipedia.org/wiki/Earth</string>

    <string name="error1">The field cannot have only a point</string>
    <string name="error2">Enter your weight, the field cannot be empty</string>
    <string name="error3">The number cannot be longer than 10 digits</string>

    <string name="back">back</string>
    <string name="event">add event</string>
    <string name="next">next</string>

    <string name="general_info">The equation to know your weight in other planets is:</string>
    <string name="general_info3">For example, in Mars:</string>
    <string name="email_info">Support email</string>
    <string name="version_text"><![CDATA[<u>Version</u>]]></string>

    <string name="day_night_mode">Night Mode</string>
    <string name="general">General</string>
    <string name="others">Others</string>
    <string name="share">Share</string>
    <string name="share_option1">Share via…</string>
    <string name="share_option2">Find out your weight on different planets of the Solar System! Download the last version here:</string>
    <string name="share_link">https://astronomer.en.uptodown.com/android</string>
    <string name="email_option">Choose email client…</string>

    <string name="redirecting">Redirecting…</string>

    <string name="langText">Change Language:</string>
    <string name="langTitle">Select Language</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="langSelect">Select</string>

    <string name="tapAgain">Tap again to exit</string>
    <string name="eclipses_link">https://astronomerweb.pythonanywhere.com/en/X9VMTFaGCKp5WMp8HDL/selected-year=</string>

</resources>
