<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item android:title="@string/general"
        android:id="@+id/general">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_weight"
                    android:icon="@drawable/ic_menu_weight"
                    android:title="@string/menu_weight" />
                <item
                    android:id="@+id/nav_eclipses"
                    android:icon="@drawable/ic_menu_eclipses"
                    android:title="@string/menu_eclipses" />
                <item
                    android:id="@+id/nav_config"
                    android:icon="@drawable/ic_menu_info"
                    android:title="@string/menu_config" />
            </group>
        </menu>
    </item>

    <item android:title="@string/others"
        android:id="@+id/others">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/switch1"
                    android:icon="@drawable/ic_night_mode"
                    android:title="@string/day_night_mode"
                    app:actionLayout="@layout/switch_item"
                    app:showAsAction="always" />
            </group>
        </menu>
    </item>

</menu>
