<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_weight">

    <fragment
        android:id="@+id/nav_weight"
        android:name="com.ludev.astronomer.ui.weight.WeightFragment"
        android:label="@string/menu_weight"
        tools:layout="@layout/fragment_weight">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.ludev.astronomer.ui.weight.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_weight" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_eclipses"
        android:name="com.ludev.astronomer.ui.eclipses.EclipsesFragment"
        android:label="@string/menu_eclipses"
        tools:layout="@layout/fragment_eclipses" />

    <fragment
        android:id="@+id/nav_config"
        android:name="com.ludev.astronomer.ui.config.ConfigFragment"
        android:label="@string/menu_config"
        tools:layout="@layout/fragment_config" />
</navigation>