<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back3"
    tools:context=".ui.config.ConfigFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya_sans"
                    android:gravity="center"
                    android:text="@string/general_info"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/example1" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/alegreya_sans"
                    android:gravity="center"
                    android:text="@string/general_info3"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/example2" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/emailButton"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="180dp"
                android:layout_height="70dp"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="80dp"
                android:text="@string/email_info"
                android:textSize="12sp"
                app:backgroundTint="@color/material_on_background_disabled"
                app:icon="@drawable/ic_mail" />

            <TextView
                android:id="@+id/langTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/alegreya_sans"
                android:textSize="18dp"
                android:text="@string/langText"
                android:textColor="#ffffff" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/langButton"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginBottom="80dp"
                app:icon="@drawable/ic_language"
                app:backgroundTint="@color/material_on_background_disabled"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:text="" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alegreya_sans"
                android:gravity="center"
                android:text="@string/version_text"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/alegreya_sans"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>