<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".ui.weight.WeightFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="144dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:layout_marginTop="10px"
                android:layout_marginRight="10px"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30px"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editWeight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxBackgroundColor="@color/material_on_background_disabled"
                        app:boxCornerRadiusTopStart="16dp"
                        app:boxCornerRadiusTopEnd="16dp"
                        app:boxCornerRadiusBottomStart="16dp"
                        app:boxCornerRadiusBottomEnd="16dp"
                        app:boxBackgroundMode="outline"
                        app:boxStrokeColor="#FFFFFF"
                        app:hintTextColor="#FFFFFF"
                        app:counterEnabled="true"
                        app:counterMaxLength="10"
                        app:counterTextColor="@color/colorAccent"
                        app:endIconMode="clear_text"
                        app:startIconDrawable="@drawable/ic_keyboard_arrow"
                        app:startIconTint="#FFFFFF"
                        app:endIconTint="#9FFFFFFF"
                        android:textColorHint="#FFFFFF"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/weight1"
                            android:inputType="numberDecimal"
                            android:textColor="#FFFFFF"
                            android:textSize="21sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonWeight"
                        android:layout_width="212dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:gravity="center"
                        android:text="@string/weight_button"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        app:cornerRadius="32dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/weight2"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="100px"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/weight3"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/mercury" />

                    <TextView
                        android:id="@+id/textMercury"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textColorLink="@color/colorPrimary"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="100px"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/weight4"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/venus" />

                    <TextView
                        android:id="@+id/textVenus"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textColorLink="@color/colorPrimary"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="100px"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/weight5"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/mars" />

                    <TextView
                        android:id="@+id/textMars"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textColorLink="@color/colorPrimary"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="100px"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/weight6"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/jupiter" />

                    <TextView
                        android:id="@+id/textJupiter"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textColorLink="@color/colorPrimary"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="100px"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/weight7"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/saturn" />

                    <TextView
                        android:id="@+id/textSaturn"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textColorLink="@color/colorPrimary"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="100px"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/weight8"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/uranus" />

                    <TextView
                        android:id="@+id/textUranus"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textColorLink="@color/colorPrimary"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="100px"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/weight9"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/neptune" />

                    <TextView
                        android:id="@+id/textNeptune"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textColorLink="@color/colorPrimary"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="100px"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/weight10"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/pluto" />

                    <TextView
                        android:id="@+id/textPluto"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textColorLink="@color/colorPrimary"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="100px"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/weight11"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/moon" />

                    <TextView
                        android:id="@+id/textMoon"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textColorLink="@color/colorPrimary"
                        android:textSize="20sp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>